@@ -14,10 +14,10 @@ index c972b3bc0b..18b5a6ee4f 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 8c90ee6f57..7de4910ce7 100644
+index b195df9007..0d6d706455 100644
 --- a/Changes
 +++ b/Changes
-@@ -1317,11 +1317,6 @@ OCaml 5.0.0 (15 December 2022)
+@@ -1320,11 +1320,6 @@ OCaml 5.0.0 (15 December 2022)
    (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
     Xavier Leroy)
  
@@ -29,7 +29,7 @@ index 8c90ee6f57..7de4910ce7 100644
  - #11516, #11524: Fix the `deprecated_mutable` attribute.
    (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
  
-@@ -1350,6 +1345,30 @@ OCaml 5.0.0 (15 December 2022)
+@@ -1353,6 +1348,30 @@ OCaml 5.0.0 (15 December 2022)
    (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
     report by Yaron Minsky)
  
@@ -60,7 +60,7 @@ index 8c90ee6f57..7de4910ce7 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -1385,13 +1404,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1388,13 +1407,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -76,7 +76,7 @@ index 8c90ee6f57..7de4910ce7 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -1498,6 +1517,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1501,6 +1520,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10464: Add List.is_empty.
    (Craig Ferguson, review by David Allsopp)
  
@@ -86,7 +86,7 @@ index 8c90ee6f57..7de4910ce7 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -1761,6 +1783,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1764,6 +1786,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -10086,7 +10086,7 @@ index 0000000000..5c2feef533
 +                 -e 's/\d027\[m/\d027[0m/g' \
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..523712793a
+index 0000000000..30acb0de43
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,10023 @@
@@ -10106,10 +10106,10 @@ index 0000000000..523712793a
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 8c90ee6f57..7de4910ce7 100644
++index b195df9007..0d6d706455 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -1317,11 +1317,6 @@ OCaml 5.0.0 (15 December 2022)
++@@ -1320,11 +1320,6 @@ OCaml 5.0.0 (15 December 2022)
 +   (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
 +    Xavier Leroy)
 + 
@@ -10121,7 +10121,7 @@ index 0000000000..523712793a
 + - #11516, #11524: Fix the `deprecated_mutable` attribute.
 +   (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
 + 
-+@@ -1350,6 +1345,30 @@ OCaml 5.0.0 (15 December 2022)
++@@ -1353,6 +1348,30 @@ OCaml 5.0.0 (15 December 2022)
 +   (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
 +    report by Yaron Minsky)
 + 
@@ -10152,7 +10152,7 @@ index 0000000000..523712793a
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -1385,13 +1404,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1388,13 +1407,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -10168,7 +10168,7 @@ index 0000000000..523712793a
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -1498,6 +1517,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1501,6 +1520,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10464: Add List.is_empty.
 +   (Craig Ferguson, review by David Allsopp)
 + 
@@ -10178,7 +10178,7 @@ index 0000000000..523712793a
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -1761,6 +1783,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1764,6 +1786,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
